--- a/packages/app/capacitor.config.json
+++ b/packages/app/capacitor.config.json
@@ -5,7 +5,25 @@
   "plugins": {
     "CapacitorCookies": {
       "enabled": true
+    },
+    "CapacitorSQLite": {
+      "iosDatabaseLocation": "Library/CapacitorDatabase",
+      "iosIsEncryption": true,
+      "iosKeychainPrefix": "finwo-sparkly",
+      "iosBiometric": {
+        "biometricAuth": false,
+        "biometricTitle": "Biometric login for capacitor sqlite"
+      },
+      "androidIsEncryption": true,
+      "androidBiometric": {
+        "biometricAuth": false,
+        "biometricTitle": "Biometric login for capacitor sqlite",
+        "biometricSubTitle": "Log in using your biometric"
+      },
+      "electronIsEncryption": true,
+      "electronWindowsLocation": "C:\\ProgramData\\CapacitorDatabases",
+      "electronMacLocation": "Databases",
+      "electronLinuxLocation": "Databases"
     }
   }
 }
-
