--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -26,6 +26,7 @@
     "@capacitor/ios": "^6.1.0",
     "@fontsource/nunito": "^5.0.18",
     "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
     "jeep-sqlite": "^2.7.2",
     "mithril": "^2.2.2",
     "sql.js": "^1.10.3"
