--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -24,11 +24,14 @@
     "@capacitor/android": "^6.1.0",
     "@capacitor/core": "^6.1.0",
     "@capacitor/ios": "^6.1.0",
+    "@finwo/di": "^1.2.0",
     "@fontsource/nunito": "^5.0.18",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
     "jeep-sqlite": "^2.7.2",
+    "json-schema-to-ts": "^3.1.0",
     "mithril": "^2.2.2",
+    "reflect-metadata": "^0.1.14",
     "sql.js": "^1.10.3"
   }
 }
